--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -49,31 +49,7 @@
 </head>
 <body class="bg-white text-gray-900 dark-mode">
     <!-- Navigation (same as landing) -->
-    <nav class="fixed w-full z-50 bg-white/95 backdrop-blur-sm border-b border-gray-200 shadow-sm">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center py-4">
-                <div class="flex items-center space-x-2">
-                    <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
-                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                        </svg>
-                    </div>
-                    <a href="larpress-Landing.html" class="text-2xl font-bold gradient-text">larpress</a>
-                    <span class="text-sm text-gray-500">.Digital</span>
-                </div>
-                <div class="hidden md:flex space-x-8">
-                    <a href="larpress-Landing.html#features" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Features</a>
-                    <a href="larpress-Landing.html#admin" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Admin Panel</a>
-                    <a href="larpress-Landing.html#installation" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Installation</a>
-                    <a href="larpress-Landing.html#pricing" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Pricing</a>
-                </div>
-                <div class="flex items-center space-x-4">
-                    <a href="#" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Documentation</a>
-                    <a href="larpress-Landing.html" class="gradient-bg text-white px-6 py-2.5 rounded-lg font-semibold hover:opacity-90 transition-opacity">Get Started</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+  <div id="header"></div>
 
     <!-- Page Header -->
     <header class="pt-32 pb-12 bg-gradient-to-br from-purple-50 via-white to-indigo-50">
@@ -140,97 +116,28 @@
         </div>
     </main>
 
-    <!-- Footer (same as landing) -->
-    <footer class="bg-gray-900 text-gray-300 py-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-4 gap-8 mb-8">
-                <div>
-                    <div class="flex items-center gap-2 mb-4">
-                        <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center"></div>
-                        <div>
-                            <div class="text-xl font-bold gradient-text">larpress</div>
-                            <div class="text-sm text-gray-500">.Digital</div>
-                        </div>
-                    </div>
-                    <p class="text-gray-400 text-sm max-w-xs">Modern Laravel CMS & application starter kit — built for speed and developer happiness.</p>
-                </div>
+  <!-- Footer -->
+  <div id="footer"></div>
 
-                <div>
-                    <h4 class="text-gray-200 font-semibold mb-4">Product</h4>
-                    <ul class="space-y-2">
-                        <li><a href="larpress-Landing.html#features" class="hover:text-white">Features</a></li>
-                        <li><a href="larpress-Landing.html#admin" class="hover:text-white">Admin Panel</a></li>
-                        <li><a href="larpress-Landing.html#installation" class="hover:text-white">Installation</a></li>
-                        <li><a href="larpress-Landing.html#pricing" class="hover:text-white">Pricing</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-gray-200 font-semibold mb-4">Company</h4>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-white">About</a></li>
-                        <li><a href="#" class="hover:text-white">Careers</a></li>
-                        <li><a href="#" class="hover:text-white">Contact</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-gray-200 font-semibold mb-4">Legal</h4>
-                    <ul class="space-y-2">
-                        <li><a href="privacy-policy.html" class="hover:text-white">Privacy Policy</a></li>
-                        <li><a href="terms-and-conditions.html" class="hover:text-white">Terms &amp; Conditions</a></li>
-                        <li><a href="#" class="hover:text-white">License</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
-                <p>&copy; 2025 larpress.Digital. All rights reserved.</p>
-                <div class="flex gap-6 mt-4 md:mt-0">
-                    <a href="privacy-policy.html" class="hover:text-white">Privacy</a>
-                    <a href="terms-and-conditions.html" class="hover:text-white">Terms</a>
-                    <a href="#" class="hover:text-white">Status</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Dark Mode Toggle Button -->
-    <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">
-        <svg id="sunIcon" class="w-6 h-6 text-white hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
-        </svg>
-        <svg id="moonIcon" class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-        </svg>
-    </button>
-
-    <script>
-        // Dark Mode Toggle (mirrors landing page behavior)
-        const themeToggle = document.getElementById('themeToggle');
-        const sunIcon = document.getElementById('sunIcon');
-        const moonIcon = document.getElementById('moonIcon');
-        const body = document.body;
-
-        const currentTheme = localStorage.getItem('theme') || 'dark';
-        if (currentTheme === 'light') {
-            body.classList.remove('dark-mode');
-            sunIcon.classList.remove('hidden');
-            moonIcon.classList.add('hidden');
-        }
-
-        themeToggle.addEventListener('click', () => {
-            body.classList.toggle('dark-mode');
-            if (body.classList.contains('dark-mode')) {
-                localStorage.setItem('theme', 'dark');
-                sunIcon.classList.add('hidden');
-                moonIcon.classList.remove('hidden');
-            } else {
-                localStorage.setItem('theme', 'light');
-                sunIcon.classList.remove('hidden');
-                moonIcon.classList.add('hidden');
-            }
+  <!-- Header / Footer Loader -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      fetch("./partials/header.html")
+        .then(res => res.text())
+        .then(html => {
+          document.getElementById("header").innerHTML = html;
         });
-    </script>
+
+      fetch("./partials/footer.html")
+        .then(res => res.text())
+        .then(html => {
+          document.getElementById("footer").innerHTML = html;
+        });
+    });
+  </script>
+
+</body>
+</html>
 </body>
 </html>
 
