--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,75 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - larpress.Digital</title>
+
+    <!-- SEO TITLE -->
+    <title>Privacy Policy | larpress.Digital</title>
+
+    <!-- SEO DESCRIPTION -->
+    <meta name="description"
+        content="Privacy Policy of larpress.Digital explaining how we collect, use, store, and protect your personal information while using our services.">
+
+    <!-- ROBOTS -->
+    <meta name="robots" content="index, follow">
+
+    <!-- CANONICAL -->
+    <link rel="canonical" href="https://larpress.digital/privacy-policy.html">
+
+    <!-- OPEN GRAPH -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Privacy Policy | larpress.Digital">
+    <meta property="og:description"
+        content="Learn how larpress.Digital collects, uses, and protects your personal information.">
+    <meta property="og:url" content="https://larpress.digital/privacy-policy.html">
+    <meta property="og:image" content="https://larpress.digital/og-image.png">
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Privacy Policy | larpress.Digital">
+    <meta name="twitter:description"
+        content="Privacy Policy of larpress.Digital explaining data collection and protection practices.">
+    <meta name="twitter:image" content="https://larpress.digital/og-image.png">
+
+    <!-- PRIVACY POLICY SCHEMA -->
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "PrivacyPolicy",
+    "name": "Privacy Policy",
+    "url": "https://larpress.digital/privacy-policy.html",
+    "publisher": {
+      "@type": "Organization",
+      "name": "larpress.Digital",
+      "url": "https://larpress.digital"
+    }
+  }
+  </script>
+
+    <!-- FONTS & TAILWIND -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     fontFamily: {
-                        'sans': ['Inter', 'sans-serif'],
+                        sans: ['Inter', 'sans-serif'],
                     }
                 }
             }
         }
     </script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
         }
+
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
+
         .gradient-text {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
-        /* Dark Mode Styles */
-        body.dark-mode { background-color: #0a0a0a; color: #f5f5f5; }
-        body.dark-mode .bg-white { background-color: #1a1a1a !important; }
-        body.dark-mode .bg-gray-50 { background-color: #0f0f0f !important; }
-        body.dark-mode .bg-gray-100 { background-color: #1a1a1a !important; }
-        body.dark-mode .text-gray-900 { color: #f5f5f5 !important; }
-        body.dark-mode .text-gray-800 { color: #e5e5e5 !important; }
-        body.dark-mode .text-gray-700 { color: #d4d4d4 !important; }
-        body.dark-mode .text-gray-600 { color: #a3a3a3 !important; }
-        body.dark-mode .border-gray-200 { border-color: #2a2a2a !important; }
-        body.dark-mode nav { background: rgba(10, 10, 10, 0.95) !important; border-color: #2a2a2a !important; }
-        .theme-toggle { position: fixed; bottom: 30px; right: 30px; z-index: 1000; width: 56px; height: 56px; border-radius: 50%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3); transition: all 0.3s ease; }
-        .theme-toggle:hover { transform: scale(1.1); box-shadow: 0 15px 40px rgba(102, 126, 234, 0.4); }
-        body.dark-mode .theme-toggle { background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); }
-    </style>
-    <meta name="description" content="Privacy Policy for larpress.Digital explaining how we collect, use, and protect your information.">
-</head>
-<body class="bg-white text-gray-900 dark-mode">
-    <!-- Navigation (same as landing) -->
-  <div id="header"></div>
 
-    <!-- Page Header -->
+        /* Dark Mode Styles */
+        body.dark-mode {
+            background-color: #0a0a0a;
+            color: #f5f5f5;
+        }
+
+        body.dark-mode .bg-white {
+            background-color: #1a1a1a !important;
+        }
+
+        body.dark-mode .bg-gray-50 {
+            background-color: #0f0f0f !important;
+        }
+
+        body.dark-mode .bg-gray-100 {
+            background-color: #1a1a1a !important;
+        }
+
+        body.dark-mode .text-gray-900 {
+            color: #f5f5f5 !important;
+        }
+
+        body.dark-mode .text-gray-800 {
+            color: #e5e5e5 !important;
+        }
+
+        body.dark-mode .text-gray-700 {
+            color: #d4d4d4 !important;
+        }
+
+        body.dark-mode .text-gray-600 {
+            color: #a3a3a3 !important;
+        }
+
+        body.dark-mode .border-gray-200 {
+            border-color: #2a2a2a !important;
+        }
+
+        body.dark-mode nav {
+            background: rgba(10, 10, 10, 0.95) !important;
+            border-color: #2a2a2a !important;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
+            width: 56px;
+            height: 56px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.4);
+        }
+
+        body.dark-mode .theme-toggle {
+            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+        }
+    </style>
+</head>
+
+<body class="bg-white text-gray-900 dark-mode">
+
+    <!-- HEADER -->
+    <div id="header"></div>
+
+    <!-- PAGE HEADER -->
     <header class="pt-32 pb-12 bg-gradient-to-br from-purple-50 via-white to-indigo-50">
-        <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-4">Privacy Policy</h1>
-            <p class="text-lg text-gray-600">Effective date: November 3, 2025</p>
+        <div class="max-w-4xl mx-auto px-4">
+            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900 mb-4">
+                Privacy Policy
+            </h1>
+            <p class="text-lg text-gray-600">
+                Effective date: January 1, 2026
+            </p>
         </div>
     </header>
 
     <!-- Content -->
     <main class="py-12">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 prose prose-lg prose-purple">
-            <p>At <strong>larpress.Digital</strong> ("we", "us", or "our"), we respect your privacy and are committed to protecting it through our compliance with this policy. This Privacy Policy describes the types of information we may collect from you or that you may provide when you use our websites, products, and services (collectively, the "Services"), and our practices for collecting, using, maintaining, protecting, and disclosing that information.</p>
+            <p>At <strong>larpress.Digital</strong> ("we", "us", or "our"), we respect your privacy and are committed to
+                protecting it through our compliance with this policy. This Privacy Policy describes the types of
+                information we may collect from you or that you may provide when you use our websites, products, and
+                services (collectively, the "Services"), and our practices for collecting, using, maintaining,
+                protecting, and disclosing that information.</p>
 
             <h2>1. Information We Collect</h2>
-            <p>We collect information that identifies, relates to, describes, or can reasonably be linked to an individual or device ("Personal Information"). This includes:</p>
+            <p>We collect information that identifies, relates to, describes, or can reasonably be linked to an
+                individual or device ("Personal Information"). This includes:</p>
             <ul>
-                <li><strong>Information you provide</strong>: account details, name, email address, billing details, support messages, and any content you upload.</li>
-                <li><strong>Automatic data</strong>: IP address, device and browser information, pages visited, referring URLs, and approximate location derived from IP.</li>
-                <li><strong>Cookies and similar technologies</strong>: used for authentication, preferences, analytics, and improving our Services.</li>
+                <li><strong>Information you provide</strong>: account details, name, email address, billing details,
+                    support messages, and any content you upload.</li>
+                <li><strong>Automatic data</strong>: IP address, device and browser information, pages visited,
+                    referring URLs, and approximate location derived from IP.</li>
+                <li><strong>Cookies and similar technologies</strong>: used for authentication, preferences, analytics,
+                    and improving our Services.</li>
             </ul>
 
             <h2>2. How We Use Information</h2>
@@ -82,63 +201,136 @@
             </ul>
 
             <h2>3. Cookies</h2>
-            <p>We use first-party and third-party cookies and similar technologies. You can control cookies through your browser settings. Disabling cookies may limit certain features of the Services.</p>
+            <p>We use first-party and third-party cookies and similar technologies. You can control cookies through your
+                browser settings. Disabling cookies may limit certain features of the Services.</p>
 
             <h2>4. Legal Bases for Processing</h2>
-            <p>Where required, we rely on the following legal bases: performance of a contract, legitimate interests, consent, and compliance with legal obligations.</p>
+            <p>Where required, we rely on the following legal bases: performance of a contract, legitimate interests,
+                consent, and compliance with legal obligations.</p>
 
             <h2>5. Sharing of Information</h2>
-            <p>We do not sell your Personal Information. We may share information with service providers who assist in operating the Services (e.g., hosting, analytics, payment processing), with professional advisors, to comply with laws, or in connection with a merger, sale, or asset transfer.</p>
+            <p>We do not sell your Personal Information. We may share information with service providers who assist in
+                operating the Services (e.g., hosting, analytics, payment processing), with professional advisors, to
+                comply with laws, or in connection with a merger, sale, or asset transfer.</p>
 
             <h2>6. Data Retention</h2>
-            <p>We retain Personal Information for as long as necessary for the purposes described, to comply with our legal obligations, resolve disputes, and enforce agreements.</p>
+            <p>We retain Personal Information for as long as necessary for the purposes described, to comply with our
+                legal obligations, resolve disputes, and enforce agreements.</p>
 
             <h2>7. Security</h2>
-            <p>We implement reasonable technical and organizational measures to protect Personal Information. However, no method of transmission or storage is completely secure.</p>
+            <p>We implement reasonable technical and organizational measures to protect Personal Information. However,
+                no method of transmission or storage is completely secure.</p>
 
             <h2>8. Your Rights</h2>
-            <p>Depending on your location, you may have rights to access, correct, delete, or restrict processing of your Personal Information, and to data portability. You may also object to processing where we rely on legitimate interests, and withdraw consent at any time where processing is based on consent.</p>
+            <p>Depending on your location, you may have rights to access, correct, delete, or restrict processing of
+                your Personal Information, and to data portability. You may also object to processing where we rely on
+                legitimate interests, and withdraw consent at any time where processing is based on consent.</p>
 
             <h2>9. International Transfers</h2>
-            <p>Your information may be transferred to and processed in countries other than your own. Where required, we implement appropriate safeguards for such transfers.</p>
+            <p>Your information may be transferred to and processed in countries other than your own. Where required, we
+                implement appropriate safeguards for such transfers.</p>
 
             <h2>10. Third-Party Links</h2>
-            <p>Our Services may contain links to third-party sites. We are not responsible for the privacy practices of those sites. We encourage you to review their policies.</p>
+            <p>Our Services may contain links to third-party sites. We are not responsible for the privacy practices of
+                those sites. We encourage you to review their policies.</p>
 
             <h2>11. Children's Privacy</h2>
-            <p>Our Services are not directed to children under 13 (or other age as required by law). We do not knowingly collect Personal Information from children.</p>
+            <p>Our Services are not directed to children under 13 (or other age as required by law). We do not knowingly
+                collect Personal Information from children.</p>
 
             <h2>12. Changes to This Policy</h2>
-            <p>We may update this Privacy Policy from time to time. The updated version will be indicated by an updated “Effective date”, and the updated version will be effective as soon as it is accessible.</p>
+            <p>We may update this Privacy Policy from time to time. The updated version will be indicated by an updated
+                “Effective date”, and the updated version will be effective as soon as it is accessible.</p>
 
             <h2>13. Contact Us</h2>
-            <p>If you have questions or requests regarding this Privacy Policy, you can contact us at: <a href="mailto:privacy@larpress.digital">privacy@larpress.digital</a>.</p>
+            <p>If you have questions or requests regarding this Privacy Policy, you can contact us at: <a
+                    href="mailto:privacy@larpress.digital">privacy@larpress.digital</a>.</p>
         </div>
     </main>
 
-  <!-- Footer -->
-  <div id="footer"></div>
+    <!-- Footer -->
+    <div id="footer"></div>
 
-  <!-- Header / Footer Loader -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      fetch("./partials/header.html")
-        .then(res => res.text())
-        .then(html => {
-          document.getElementById("header").innerHTML = html;
+
+    <!-- Dark Mode Toggle Button -->
+    <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">
+        <svg id="sunIcon" class="w-6 h-6 text-white hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+            </path>
+        </svg>
+        <svg id="moonIcon" class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+        </svg>
+    </button>
+
+    <script>
+        // Dark Mode Toggle
+        const themeToggle = document.getElementById('themeToggle');
+        const sunIcon = document.getElementById('sunIcon');
+        const moonIcon = document.getElementById('moonIcon');
+        const body = document.body;
+
+        // Check for saved theme preference or default to dark mode
+        const currentTheme = localStorage.getItem('theme') || 'dark';
+        if (currentTheme === 'light') {
+            body.classList.remove('dark-mode');
+            sunIcon.classList.remove('hidden');
+            moonIcon.classList.add('hidden');
+        }
+
+        themeToggle.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+
+            if (body.classList.contains('dark-mode')) {
+                localStorage.setItem('theme', 'dark');
+                sunIcon.classList.add('hidden');
+                moonIcon.classList.remove('hidden');
+            } else {
+                localStorage.setItem('theme', 'light');
+                sunIcon.classList.remove('hidden');
+                moonIcon.classList.add('hidden');
+            }
         });
 
-      fetch("./partials/footer.html")
-        .then(res => res.text())
-        .then(html => {
-          document.getElementById("footer").innerHTML = html;
+        // Smooth Scroll for same-page anchors
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                // Only handle same-page anchors (href starting with '#' and not just '#')
+                const href = this.getAttribute('href');
+                if (!href || href === '#') return;
+                const target = document.querySelector(href);
+                if (target) {
+                    e.preventDefault();
+                    target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    // Update focus for accessibility
+                    target.setAttribute('tabindex', '-1');
+                    target.focus({ preventScroll: true });
+                }
+            });
         });
-    });
-  </script>
+    </script>
+    <!-- Header / Footer Loader -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            fetch("./partials/header.html")
+                .then(res => res.text())
+                .then(html => {
+                    document.getElementById("header").innerHTML = html;
+                });
+
+            fetch("./partials/footer.html")
+                .then(res => res.text())
+                .then(html => {
+                    document.getElementById("footer").innerHTML = html;
+                });
+        });
+    </script>
 
 </body>
+
 </html>
 </body>
+
 </html>
-
-
