--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,46 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions - larpress.Digital</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    fontFamily: {
-                        'sans': ['Inter', 'sans-serif'],
-                    }
-                }
-            }
+  <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO TITLE -->
+  <title>Terms and Conditions | larpress.Digital</title>
+
+  <!-- SEO DESCRIPTION -->
+  <meta name="description"
+        content="Read the Terms and Conditions for using larpress.Digital products, services, software, and website. Understand your rights, responsibilities, and legal terms.">
+
+  <!-- ROBOTS -->
+  <meta name="robots" content="index, follow">
+
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://larpress.digital/terms-conditions.html">
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Terms and Conditions | larpress.Digital">
+  <meta property="og:description"
+        content="Official Terms and Conditions governing the use of larpress.Digital services, software, and website.">
+  <meta property="og:url" content="https://larpress.digital/terms-conditions.html">
+  <meta property="og:image" content="https://larpress.digital/og-image.png">
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Terms and Conditions | larpress.Digital">
+  <meta name="twitter:description"
+        content="Legal terms and conditions for using larpress.Digital CMS and services.">
+  <meta name="twitter:image" content="https://larpress.digital/og-image.png">
+
+  <!-- FONTS & TAILWIND -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          }
         }
-    </script>
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        .gradient-bg { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
-        .gradient-text { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
-        /* Dark Mode Styles */
-        body.dark-mode { background-color: #0a0a0a; color: #f5f5f5; }
-        body.dark-mode .bg-white { background-color: #1a1a1a !important; }
-        body.dark-mode .bg-gray-50 { background-color: #0f0f0f !important; }
-        body.dark-mode .bg-gray-100 { background-color: #1a1a1a !important; }
-        body.dark-mode .text-gray-900 { color: #f5f5f5 !important; }
-        body.dark-mode .text-gray-800 { color: #e5e5e5 !important; }
-        body.dark-mode .text-gray-700 { color: #d4d4d4 !important; }
-        body.dark-mode .text-gray-600 { color: #a3a3a3 !important; }
-        body.dark-mode .border-gray-200 { border-color: #2a2a2a !important; }
-        body.dark-mode nav { background: rgba(10, 10, 10, 0.95) !important; border-color: #2a2a2a !important; }
-        .theme-toggle { position: fixed; bottom: 30px; right: 30px; z-index: 1000; width: 56px; height: 56px; border-radius: 50%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3); transition: all 0.3s ease; }
-        .theme-toggle:hover { transform: scale(1.1); box-shadow: 0 15px 40px rgba(102, 126, 234, 0.4); }
-        body.dark-mode .theme-toggle { background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); }
-    </style>
-    <meta name="description" content="Terms and Conditions for using larpress.Digital products and services.">
+      }
+    }
+  </script>
+
+  <!-- LEGAL PAGE SCHEMA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Terms and Conditions",
+    "url": "https://larpress.digital/terms-conditions.html",
+    "description": "Terms and Conditions for using larpress.Digital products and services",
+    "publisher": {
+      "@type": "Organization",
+      "name": "larpress.Digital",
+      "url": "https://larpress.digital"
+    }
+  }
+  </script>
+
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .gradient-bg { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+    body.dark-mode { background-color: #0a0a0a; color: #f5f5f5; }
+  </style>
 </head>
+
 <body class="bg-white text-gray-900 dark-mode">
-    <!-- Navigation (same as landing) -->
-  <div id="header"></div>
+
+<!-- HEADER -->
+<div id="header"></div>
     <!-- Page Header -->
     <header class="pt-32 pb-12 bg-gradient-to-br from-purple-50 via-white to-indigo-50">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -108,7 +144,65 @@
 
   <!-- Footer -->
   <div id="footer"></div>
+    <!-- Dark Mode Toggle Button -->
+    <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">
+        <svg id="sunIcon" class="w-6 h-6 text-white hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+            </path>
+        </svg>
+        <svg id="moonIcon" class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+        </svg>
+    </button>
 
+    <script>
+        // Dark Mode Toggle
+        const themeToggle = document.getElementById('themeToggle');
+        const sunIcon = document.getElementById('sunIcon');
+        const moonIcon = document.getElementById('moonIcon');
+        const body = document.body;
+
+        // Check for saved theme preference or default to dark mode
+        const currentTheme = localStorage.getItem('theme') || 'dark';
+        if (currentTheme === 'light') {
+            body.classList.remove('dark-mode');
+            sunIcon.classList.remove('hidden');
+            moonIcon.classList.add('hidden');
+        }
+
+        themeToggle.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+
+            if (body.classList.contains('dark-mode')) {
+                localStorage.setItem('theme', 'dark');
+                sunIcon.classList.add('hidden');
+                moonIcon.classList.remove('hidden');
+            } else {
+                localStorage.setItem('theme', 'light');
+                sunIcon.classList.remove('hidden');
+                moonIcon.classList.add('hidden');
+            }
+        });
+
+        // Smooth Scroll for same-page anchors
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                // Only handle same-page anchors (href starting with '#' and not just '#')
+                const href = this.getAttribute('href');
+                if (!href || href === '#') return;
+                const target = document.querySelector(href);
+                if (target) {
+                    e.preventDefault();
+                    target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    // Update focus for accessibility
+                    target.setAttribute('tabindex', '-1');
+                    target.focus({ preventScroll: true });
+                }
+            });
+        });
+    </script>
   <!-- Header / Footer Loader -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
