--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,11 @@
   <meta name="author" content="larpress.Digital">
   <meta name="robots" content="index, follow">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+  <link rel="apple-touch-icon" href="./src/logo/LP-icon.ico">
+
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
