--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <meta name="author" content="larpress.Digital">
     <meta name="robots" content="index, follow">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+    <link rel="apple-touch-icon" href="./src/logo/LP-icon.ico">
+
     <!-- Canonical -->
     <link rel="canonical" href="https://larpress.digital/" />
 
