--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,6 +16,11 @@
     <!-- ROBOTS -->
     <meta name="robots" content="index, follow">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+    <link rel="apple-touch-icon" href="./src/logo/LP-icon.ico">
+
     <!-- CANONICAL -->
     <link rel="canonical" href="https://larpress.digital/privacy-policy.html">
 
