--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -15,6 +15,11 @@
   <!-- ROBOTS -->
   <meta name="robots" content="index, follow">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="./src/logo/LP-icon.ico">
+  <link rel="apple-touch-icon" href="./src/logo/LP-icon.ico">
+
   <!-- CANONICAL -->
   <link rel="canonical" href="https://larpress.digital/terms-conditions.html">
 
@@ -222,5 +227,3 @@
 
 </body>
 </html>
-
-
