--- a/index.html
+++ b/index.html
@@ -55,14 +55,247 @@
             }
         }
     </script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
 
+        .gradient-bg {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
 
+        .gradient-text {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .feature-card {
+            transition: all 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-8px);
+        }
+
+        .code-block {
+            background: #1a1a1a;
+            border-radius: 12px;
+            padding: 1.5rem;
+            overflow-x: auto;
+        }
+
+        .code-block code {
+            color: #00ff00;
+            font-family: 'Courier New', monospace;
+            font-size: 0.875rem;
+        }
+
+        @keyframes float {
+            0%,
+            100% {
+                transform: translateY(0px);
+            }
+
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
+        .float-animation {
+            animation: float 6s ease-in-out infinite;
+        }
+
+        .admin-section {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .admin-section::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(102, 126, 234, 0.1) 0%, transparent 70%);
+            animation: rotate 20s linear infinite;
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Dark Mode Styles */
+        body.dark-mode {
+            background-color: #0a0a0a;
+            color: #f5f5f5;
+        }
+
+        body.dark-mode .bg-white {
+            background-color: #1a1a1a !important;
+        }
+
+        body.dark-mode .bg-gray-50 {
+            background-color: #0f0f0f !important;
+        }
+
+        body.dark-mode .bg-gray-100 {
+            background-color: #1a1a1a !important;
+        }
+
+        body.dark-mode .text-gray-900 {
+            color: #f5f5f5 !important;
+        }
+
+        body.dark-mode .text-gray-800 {
+            color: #e5e5e5 !important;
+        }
+
+        body.dark-mode .text-gray-700 {
+            color: #d4d4d4 !important;
+        }
+
+        body.dark-mode .text-gray-600 {
+            color: #a3a3a3 !important;
+        }
+
+        body.dark-mode .border-gray-200 {
+            border-color: #2a2a2a !important;
+        }
+
+        body.dark-mode .bg-purple-50 {
+            background-color: rgba(102, 126, 234, 0.1) !important;
+        }
+
+        body.dark-mode .bg-indigo-50 {
+            background-color: rgba(99, 102, 241, 0.1) !important;
+        }
+
+        body.dark-mode .bg-gradient-to-br.from-purple-50 {
+            background: rgba(102, 126, 234, 0.05) !important;
+        }
+
+        /* Dark mode fixes for gradient feature cards */
+        body.dark-mode .bg-gradient-to-br.from-indigo-50 {
+            background: rgba(99, 102, 241, 0.06) !important;
+        }
+
+        /* Neutralize white gradient endpoints in dark mode */
+        body.dark-mode .to-white {
+            --tw-gradient-to: rgba(255, 255, 255, 0.03) var(--tw-gradient-to-position) !important;
+        }
+
+        /* Tweak starting gradient color opacities for subtle dark gradients */
+        body.dark-mode .from-purple-50 {
+            --tw-gradient-from: rgba(102, 126, 234, 0.10) var(--tw-gradient-from-position) !important;
+        }
+
+        body.dark-mode .from-indigo-50 {
+            --tw-gradient-from: rgba(99, 102, 241, 0.10) var(--tw-gradient-from-position) !important;
+        }
+
+        /* Ensure feature cards look dark, not white, in dark mode */
+        body.dark-mode .feature-card {
+            background-color: rgba(255, 255, 255, 0.04) !important;
+            border-color: #2a2a2a !important;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.45) !important;
+        }
+
+        body.dark-mode .border-purple-100,
+        body.dark-mode .border-indigo-100 {
+            border-color: rgba(102, 126, 234, 0.2) !important;
+        }
+
+        body.dark-mode .shadow-sm,
+        body.dark-mode .shadow-lg,
+        body.dark-mode .shadow-2xl {
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5) !important;
+        }
+
+        body.dark-mode nav {
+            background: rgba(10, 10, 10, 0.95) !important;
+            border-color: #2a2a2a !important;
+        }
+
+        body.dark-mode .code-block {
+            background: #000000;
+            border: 1px solid #2a2a2a;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 1000;
+            width: 56px;
+            height: 56px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.4);
+        }
+
+        body.dark-mode .theme-toggle {
+            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+        }
+
+        body.dark-mode .via-white {
+            --tw-gradient-stops: var(--tw-gradient-from), rgba(255, 255, 255, 0.06), var(--tw-gradient-to) !important;
+        }
+    </style>
 
 </head>
 
 <body class="bg-white text-gray-900 dark-mode">
 
-    <div id="header"></div>
+    <!-- Navigation -->
+    <nav class="fixed w-full z-50 bg-white/95 backdrop-blur-sm border-b border-gray-200 shadow-sm">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center py-4">
+                <div class="flex items-center space-x-2">
+                    <a href="index.html">
+                        <img src="./src/logo/larpress-logo.svg" alt="larpress.Digital" class="h-10">
+                    </a>
+                </div>
+                <div class="hidden md:flex space-x-8">
+                    <a href="#features"
+                        class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Features</a>
+                    <a href="#admin" class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Admin
+                        Panel</a>
+                    <a href="#installation"
+                        class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Installation</a>
+                    <a href="#pricing"
+                        class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Pricing</a>
+                </div>
+                <div class="flex items-center space-x-4">
+                    <a href="https://doc.larpress.digital/"
+                        class="text-gray-700 hover:text-purple-600 transition-colors font-medium">Documentation</a>
+                    <button
+                        class="gradient-bg text-white px-6 py-2.5 rounded-lg font-semibold hover:opacity-90 transition-opacity">
+                        Get Started
+                    </button>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <!-- Hero Section -->
     <section class="pt-32 pb-20 bg-gradient-to-br from-purple-50 via-white to-indigo-50 relative overflow-hidden">
         <div class="absolute inset-0 opacity-10">
@@ -849,7 +1082,56 @@
     </section>
 
     <!-- Footer -->
-    <div id="footer"></div>
+    <footer class="bg-gray-900 text-gray-300 py-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid md:grid-cols-4 gap-8 mb-8">
+                <div>
+                    <div class="flex items-center gap-2 mb-4">
+                        <img src="./src/logo/larpress-logo.svg" alt="larpress.Digital" class="h-8">
+                    </div>
+                    <p class="text-gray-400 text-sm max-w-xs">Modern Laravel CMS & application starter kit — built for
+                        speed and developer happiness.</p>
+                </div>
+
+                <div>
+                    <h4 class="text-gray-200 font-semibold mb-4">Product</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#features" class="hover:text-white">Features</a></li>
+                        <li><a href="#admin" class="hover:text-white">Admin Panel</a></li>
+                        <li><a href="#installation" class="hover:text-white">Installation</a></li>
+                        <li><a href="#pricing" class="hover:text-white">Pricing</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-gray-200 font-semibold mb-4">Company</h4>
+                    <ul class="space-y-2">
+                        <li><a href="about-us.html" class="hover:text-white">About</a></li>
+                        <li><a href="#" class="hover:text-white">Careers</a></li>
+                        <li><a href="#" class="hover:text-white">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-gray-200 font-semibold mb-4">Legal</h4>
+                    <ul class="space-y-2">
+                        <li><a href="privacy-policy.html" class="hover:text-white">Privacy Policy</a></li>
+                        <li><a href="terms-and-conditions.html" class="hover:text-white">Terms &amp; Conditions</a></li>
+                        <li><a href="#" class="hover:text-white">License</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div
+                class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center text-sm text-gray-400">
+                <p>&copy; 2024 larpress.Digital. All rights reserved.</p>
+                <div class="flex gap-6 mt-4 md:mt-0">
+                    <a href="privacy-policy.html" class="hover:text-white">Privacy</a>
+                    <a href="terms-and-conditions.html" class="hover:text-white">Terms</a>
+                    <a href="#" class="hover:text-white">Status</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Dark Mode Toggle Button -->
     <button class="theme-toggle" id="themeToggle" title="Toggle Dark Mode">
@@ -908,23 +1190,6 @@
                     target.focus({ preventScroll: true });
                 }
             });
-        });
-    </script>
-    
-    <!-- Header / Footer Loader -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch("./partials/header.html")
-                .then(res => res.text())
-                .then(html => {
-                    document.getElementById("header").innerHTML = html;
-                });
-
-            fetch("./partials/footer.html")
-                .then(res => res.text())
-                .then(html => {
-                    document.getElementById("footer").innerHTML = html;
-                });
         });
     </script>
 
